[tool.poetry]
name = "induction_visualization"
version = "1.0.0"
description = ""
authors = ["Storm Mata <storm.mata@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^2.0.0"
matplotlib = "^3.10.0"
jinja2 = "^3.1.4"
padeopsio = { git = "https://github.com/StormMata/induction_visualization.git", branch = "main", optional = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
